added metrics and scope page, added CRUD operations for metrics, added EntryForm component to edit and create metrics

--- a/components/header.module.scss
+++ b/components/header.module.scss
@@ -1,9 +1,9 @@
-@use "@/styles/variables" as *;
+@use '@/styles/variables' as *;
 
 .header {
-    position: sticky;
-    top: 0;
-    z-index: 10;
-    background: $white;
-    border-bottom: 1px solid $border;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background: $white;
+  border-bottom: 1px solid $border;
 }
